More aggressive folder name truncation in the path-bar
Steps to reproduce
- Create a folder with a long name (around 50 characters)
- Open it
- Try to resize or tile the window
Reproducible in:
- Flatpak unstable
- 3.22 to 3.26.x
Current behavior
Even with the "only close button" layout that no one use, window tiling is prevented by the current folder name if it is long https://i.imgur.com/AupOIIV.png
(here, using a 1366×768 screen)
Expected behavior
Folder name truncation should be more aggressive.
This could be compensated by showing the full name of the folder as a tooltip.
Edited by Maoschanz