pathbar: Making the path bar shrinkable

Long folder name prevent nautilus from resize or tile

The path bar currently do not shrink in size with the windows size

This fix will shrink the path bar size according to the windows size

Closes https://gitlab.gnome.org/GNOME/nautilus/issues/425